--- a/config/templates/publish_mdm/devices_list.html
+++ b/config/templates/publish_mdm/devices_list.html
@@ -13,12 +13,26 @@
     </style>
 {% endblock extra-css %}
 {% block content %}
+    <script>
+    function fixEnrollModalBackdrop() {
+        // We call window.initFlowbite() on every `htmx:afterSwap` event (in base.html).
+        // This causes the device enrollment modal to lose its backdrop if it's currently
+        // open, due to a Flowbite bug:
+        // - https://github.com/themesberg/flowbite/issues/820
+        // - https://github.com/themesberg/flowbite/issues/1042
+        // Adding `hx-on::after-swap="fixEnrollModalBackdrop()"` to any HTMX targets
+        // within the device enrollment modal fixes the issue.
+        window.FlowbiteInstances.getInstance("Modal", "qr-codes-modal").show();
+    }
+    </script>
     {% partialdef devices-list-partial inline %}
         {% fragment as table_header_buttons %}
         <button type="button"
                 class="btn btn-outline btn-primary flex items-center justify-center text-sm px-4 py-2"
                 data-modal-target="qr-codes-modal"
-                data-modal-toggle="qr-codes-modal">
+                data-modal-toggle="qr-codes-modal"
+                hx-get="{% url 'publish_mdm:check-mdm-license-limit' %}"
+                hx-target="#license-limit-messages">
             <svg class="w-[20px] h-[20px] mr-2"
                  aria-hidden="true"
                  xmlns="http://www.w3.org/2000/svg"
@@ -73,6 +87,8 @@
                     </button>
                 </div>
                 <div x-data="{device: null}" class="p-4 md:p-5">
+                    <div id="license-limit-messages"
+                         hx-on::after-swap="fixEnrollModalBackdrop()"></div>
                     <div class="flex w-full flex-col md:flex-row justify-center items-center space-x-0 md:space-x-2">
                         <label class="font-medium text-gray-900 dark:text-white">Select a device type:</label>
                         <div class="flex items-center">
@@ -108,7 +124,9 @@
                         <p class="mb-4 dark:text-gray-400">
                             Please fill in the form below and you will receive instructions on how to enroll your device.
                         </p>
-                        <div id="byod">{% include "includes/device_enrollment_form.html" with form=byod_form %}</div>
+                        <div id="byod" hx-on::after-swap="fixEnrollModalBackdrop()">
+                            {% include "includes/device_enrollment_form.html" with form=byod_form %}
+                        </div>
                         <div class="w-full mt-6">
                             <button id="byod-button"
                                     class="btn btn-outline btn-primary disabled:opacity-50 disabled:cursor-not-allowed">
@@ -125,7 +143,11 @@
                             <label for="id_fleet" class="font-medium text-gray-900 dark:text-white">Fleet:</label>
                             {{ enroll_form.fleet }}
                         </div>
-                        {% include "includes/mdm_enroll_qr_code.html" %}
+                        <div id="qr-code"
+                             class="w-full relative"
+                             hx-on::after-swap="fixEnrollModalBackdrop()">
+                            {% include "includes/mdm_enroll_qr_code.html" %}
+                        </div>
                     </form>
                 </div>
             </div>
