--- a/config/templates/publish_mdm/ws/message.html
+++ b/config/templates/publish_mdm/ws/message.html
@@ -2,8 +2,16 @@
     <div class="text-xs flex justify-end items-start p-3 {% if not error %}text-primary-700 bg-primary-100 dark:bg-gray-800 dark:text-primary-300{% else %} text-red-700 bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}">
         {% now "n/j G:i:s.u" %}
     </div>
-    <div class="col-span-4 text-sm p-3 {% if complete %}font-bold{% endif %} {% if not error %}text-black dark:bg-gray-800 dark:text-primary-300{% else %} overflow-auto font-mono text-red-700 bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}">
-        {% if error %}<pre class="text-xs">{% endif %}{{ message_text|escape }}{% if error %}</pre>
+    <div class="col-span-4 text-sm p-3 {% if complete %}font-bold{% endif %} {% if not error %}text-black dark:bg-gray-800 dark:text-primary-300{% else %} overflow-auto text-red-700 bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}">
+        {% if error_summary %}
+            {{ error_summary }}
+            <details>
+                <summary class="cursor-pointer hover:underline">View the traceback</summary>
+                <pre class="text-xs font-mono mt-2">{{ message_text|escape }}</pre>
+            </details>
+        {% else %}
+            {% if error %}<pre class="text-xs font-mono">{% endif %}{{ message_text|escape }}{% if error %}</pre>
+            {% endif %}
         {% endif %}
         {% if complete or error %}<span x-data x-init="$store.publishing = false"></span>{% endif %}
     </div>
