--- a/apps/patterns/templates/patterns/tables/table-partial.html
+++ b/apps/patterns/templates/patterns/tables/table-partial.html
@@ -8,13 +8,14 @@
                 {% if search_form %}
                     <div class="w-full md:w-1/2">
                         <form class="flex items-center"
+                              x-data="{search: ''}"
                               hx-get="{% querystring without 'search' 'page' %}"
                               hx-target="#inner-table"
                               hx-swap="outerHTML"
                               hx-push-url="true"
                               hx-indicator=".progress">
                             <label for="{{ search_form.search.auto_id }}" class="sr-only">Search</label>
-                            <div class="relative w-full *:[input]:pl-10">
+                            <div class="relative w-full *:[input]:px-10">
                                 <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                                     <svg aria-hidden="true"
                                          class="w-5 h-5 text-gray-500 dark:text-gray-400"
@@ -25,6 +26,22 @@
                                     </svg>
                                 </div>
                                 {{ search_form.search }}
+                                <button type="button"
+                                        class="absolute inset-y-0 right-0 flex items-center pr-3 cursor-pointer"
+                                        x-show="search"
+                                        x-cloak
+                                        @click="search = ''; document.getElementById('{{ search_form.search.auto_id }}').focus();"
+                                        title="Clear">
+                                    <svg class="w-5 h-5 text-gray-500 dark:text-gray-400 hover:text-primary-700 dark:hover:text-white"
+                                         aria-hidden="true"
+                                         xmlns="http://www.w3.org/2000/svg"
+                                         width="24"
+                                         height="24"
+                                         fill="none"
+                                         viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                                    </svg>
+                                </button>
                             </div>
                         </form>
                     </div>
